@@ -1,3 +1,8 @@
+2018-02-28  Nathan Sidwell  <nathan@acm.org>
+
+	PR c++/84602
+	* g++.dg/lookup/pr84602.C: New.
+
 2018-02-28  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/83871
@@ -5,7 +10,8 @@
 	* g++.dg/ext/attr-warning.C: Remove -fdump-tree-optimized from
 	dg-options.
 	* g++.dg/ext/attr-nonnull.C: Likewise.
-	* g++.dg/ext/attr-noinline.C: Fix syntax in scan-tree-dump-not directives.
+	* g++.dg/ext/attr-noinline.C: Fix syntax in scan-tree-dump-not
+	directives.
 	* g++.dg/ext/attr-noinline-2.C: Likewise.
 	* g++.dg/ext/attr-noreturn-2.C: Use -fdump-tree-optimized instead of
 	-fdump-tree-eh in dg-options.
