@@ -1,3 +1,11 @@
+2018-02-28  Nathan Sidwell  <nathan@acm.org>
+
+	PR c++/84602
+	* name-lookup.h (search_anon_aggr): Add defaulted WANT_TYPE arg.
+	* name-lookup.c (fields_linear_search): Look in an anon-aggr
+	regardless of want_type.
+	(search_anon_aggr): Just use get_class_binding_direct.
+
 2018-02-28  Jakub Jelinek  <jakub@redhat.com>
 
 	* decl.c (cp_finish_decomp): Don't adjust eltscnt when calling
